[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bentests"]

[project]
name = "bentests"
version = "1.0.1"
description = "A unit-testing framework"
readme = "README.md"
requires-python = ">=3.8"

# Dependencies
dependencies = [
    "typing",
    "numpy",
	"colorama"
]

[project.urls]
homepage = "https://github.com/ben-251/ben-tests"